ACS-2236: Fixing NPE when no body provided for POST requests. (#840)